# forecasting-tracker

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
forecasting_tracker/: __init__.py  __main__.py  cli.py  tracker.py
forecasting_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
forecasting_tracker/api/: app.py  models.py
forecasting_tracker/api/routes/: predictions.py  stats.py
forecasting_tracker/db/: database.py  models.py
forecasting_tracker/scoring/: brier.py  calibration.py  ece.py
tests/: conftest.py  test_api.py  test_scoring.py  test_tracker.py
