[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting-tracker"
version = "0.1.0"
description = "Personal forecasting tracker with Brier scoring, ECE, and calibration curves"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
forecasting-tracker = "forecasting_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forecasting_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["forecasting_tracker"]
omit = ["*/tests/*"]
